--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -104,12 +104,15 @@ nav {
     mix-blend-mode: multiply;
     width: 1140px;
     height: 300px;
+    margin-left: 200px;
 }
 
 .call-head {
     font-weight: 700;
     font-size: 40px;
     color: #FFFFFF;
+    padding-top: 30px;
+    padding-left: 40px;
 }
 
 .call-button {
@@ -118,4 +121,48 @@ nav {
     font-weight: 600;
     font-size: 20px;
     color: #F15B22;
+    margin-left: 40px;
+}
+
+/*footer*/
+.info {
+    text-decoration-color: aliceblue;
+    color: aliceblue;
+}
+.info-left{
+    padding-top: 100px;
+}
+
+.subscribe {
+    text-align:right;
+    padding-right: 100px;
+    font-size: 20px;
+    
+}
+
+.info-title {
+    padding-top: 20px;
+    padding-left: 100px;
+}
+
+.call-button {
+    width: 170.11px;
+    height: 64px;
+    margin-bottom: 30px;
+}
+
+.email {
+    margin-bottom: 30px;
+    background-color: #151414;
+    padding: 15px;
+}
+
+.info-description {
+    padding:50px;
+}
+.contact{
+    padding-left: 50px;
+}
+.title-subscribe{
+   
 }
